Fix d-header-wrap rule

--- a/common/common.scss
+++ b/common/common.scss
@@ -2974,7 +2974,7 @@ body .post-stream * {
   font-weight: normal !important;
 }
 
-d-header-wrap {
+.d-header-wrap {
   z-index: 1103 !important;
 }
 
